<?xml version="1.0"?>
<package format="3">
  <name>dynamixel_hw</name>
  <version>0.1.0</version>
  <description>Put description here!</description>
  <maintainer email="david.ney@live.com">David Ney</maintainer>
  <author email="david.ney@live.com">David Ney</author>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
